# wayzoom

./: .gitignore  Cargo.toml  LICENSE  README.md
packaging/: PKGBUILD
src/: capture.rs  crop.rs  main.rs  render.rs
